app-in-apps/yaml/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-deployment
  labels:
    app: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.4.2
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "1"
          volumeMounts:
            - name: mealie-data
              mountPath: "/app/data"
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data-pvc
