app-in-apps/yaml/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  labels:
    app: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: ui
      port: 9925
      protocol: TCP
      targetPort: 9000
  type: ClusterIP
